--- a/rating_system/pubspec.yaml
+++ b/rating_system/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   image_picker: ^1.0.7
+  connectivity_plus: ^5.0.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_database: ^10.4.0
+  firebase_storage: ^11.6.0
 
 
 
